Fix copy button z-index

--- a/docs/theme/sass/_theme_layout.sass
+++ b/docs/theme/sass/_theme_layout.sass
@@ -2297,7 +2297,6 @@ div.pdf-download
 
 a.copybtn.o-tooltip--left
   position: absolute
-  z-index: 9999
   opacity: 1
   left: 1.5em
   top: 0.7em
